// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IstioConfigCard shows empty state when no items 1`] = `
<Card
  id="IstioConfigCard"
  isCompact={true}
>
  <CardHeader>
    <CardActions />
    <CardTitle
      style={
        Object {
          "float": "left",
        }
      }
    >
      Istio Config
    </CardTitle>
  </CardHeader>
  <CardBody>
    <Table
      aria-label="list_istio_config"
      borders={true}
      canCollapseAll={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "Name",
          },
          Object {
            "title": "Status",
            "transforms": Array [
              [Function],
            ],
          },
        ]
      }
      className="table"
      collapseAllAriaLabel=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isHeaderSelectDisabled={false}
      isNested={false}
      isStickyHeader={false}
      isTreeTable={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              Object {
                "props": Object {
                  "colSpan": 2,
                },
                "title": <EmptyState
                  className="fvhz1n5"
                  variant="small"
                >
                  <EmptyStateBody
                    className="fvhz1n5"
                    data-test="istio-config-empty"
                  >
                    No Istio Config found for 
                    reviews
                  </EmptyStateBody>
                </EmptyState>,
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      variant="compact"
    >
      <TableHeader />
      <TableBody />
    </Table>
  </CardBody>
</Card>
`;

exports[`IstioConfigCard sort by type and name 1`] = `
<Card
  id="IstioConfigCard"
  isCompact={true}
>
  <CardHeader>
    <CardActions />
    <CardTitle
      style={
        Object {
          "float": "left",
        }
      }
    >
      Istio Config
    </CardTitle>
  </CardHeader>
  <CardBody>
    <Table
      aria-label="list_istio_config"
      borders={true}
      canCollapseAll={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "Name",
          },
          Object {
            "title": "Status",
            "transforms": Array [
              [Function],
            ],
          },
        ]
      }
      className="table"
      collapseAllAriaLabel=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isHeaderSelectDisabled={false}
      isNested={false}
      isStickyHeader={false}
      isTreeTable={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              Object {
                "title": <span>
                  <PFBadge
                    badge={
                      Object {
                        "badge": "DR",
                        "tt": "Destination Rule",
                      }
                    }
                    position="top"
                  />
                  <IstioObjectLink
                    name="reviews-v2"
                    namespace="bookinfo"
                    type="destinationrule"
                  >
                    reviews-v2
                  </IstioObjectLink>
                </span>,
              },
              Object {
                "title": <ValidationObjectSummary
                  id="0-config-validation"
                  style={
                    Object {
                      "verticalAlign": "-0.5em",
                    }
                  }
                  validations={Array []}
                />,
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": <span>
                  <PFBadge
                    badge={
                      Object {
                        "badge": "DR",
                        "tt": "Destination Rule",
                      }
                    }
                    position="top"
                  />
                  <IstioObjectLink
                    name="reviews-v8"
                    namespace="bookinfo"
                    type="destinationrule"
                  >
                    reviews-v8
                  </IstioObjectLink>
                </span>,
              },
              Object {
                "title": <ValidationObjectSummary
                  id="1-config-validation"
                  style={
                    Object {
                      "verticalAlign": "-0.5em",
                    }
                  }
                  validations={Array []}
                />,
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": <span>
                  <PFBadge
                    badge={
                      Object {
                        "badge": "DR",
                        "tt": "Destination Rule",
                      }
                    }
                    position="top"
                  />
                  <IstioObjectLink
                    name="reviews-v9"
                    namespace="bookinfo"
                    type="destinationrule"
                  >
                    reviews-v9
                  </IstioObjectLink>
                </span>,
              },
              Object {
                "title": <ValidationObjectSummary
                  id="2-config-validation"
                  style={
                    Object {
                      "verticalAlign": "-0.5em",
                    }
                  }
                  validations={Array []}
                />,
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": <span>
                  <PFBadge
                    badge={
                      Object {
                        "badge": "SC",
                        "tt": "Istio Sidecar Proxy",
                      }
                    }
                    position="top"
                  />
                  <IstioObjectLink
                    name="reviews-v1"
                    namespace="bookinfo"
                    type="sidecar"
                  >
                    reviews-v1
                  </IstioObjectLink>
                </span>,
              },
              Object {
                "title": <ValidationObjectSummary
                  id="3-config-validation"
                  style={
                    Object {
                      "verticalAlign": "-0.5em",
                    }
                  }
                  validations={Array []}
                />,
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": <span>
                  <PFBadge
                    badge={
                      Object {
                        "badge": "SC",
                        "tt": "Istio Sidecar Proxy",
                      }
                    }
                    position="top"
                  />
                  <IstioObjectLink
                    name="reviews-v3"
                    namespace="bookinfo"
                    type="sidecar"
                  >
                    reviews-v3
                  </IstioObjectLink>
                </span>,
              },
              Object {
                "title": <ValidationObjectSummary
                  id="4-config-validation"
                  style={
                    Object {
                      "verticalAlign": "-0.5em",
                    }
                  }
                  validations={Array []}
                />,
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": <span>
                  <PFBadge
                    badge={
                      Object {
                        "badge": "SC",
                        "tt": "Istio Sidecar Proxy",
                      }
                    }
                    position="top"
                  />
                  <IstioObjectLink
                    name="reviews-v9"
                    namespace="bookinfo"
                    type="sidecar"
                  >
                    reviews-v9
                  </IstioObjectLink>
                </span>,
              },
              Object {
                "title": <ValidationObjectSummary
                  id="5-config-validation"
                  style={
                    Object {
                      "verticalAlign": "-0.5em",
                    }
                  }
                  validations={Array []}
                />,
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": <span>
                  <PFBadge
                    badge={
                      Object {
                        "badge": "VS",
                        "tt": "Virtual Service",
                      }
                    }
                    position="top"
                  />
                  <IstioObjectLink
                    name="reviews-v5"
                    namespace="bookinfo"
                    type="virtualservice"
                  >
                    reviews-v5
                  </IstioObjectLink>
                </span>,
              },
              Object {
                "title": <ValidationObjectSummary
                  id="6-config-validation"
                  style={
                    Object {
                      "verticalAlign": "-0.5em",
                    }
                  }
                  validations={Array []}
                />,
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": <span>
                  <PFBadge
                    badge={
                      Object {
                        "badge": "VS",
                        "tt": "Virtual Service",
                      }
                    }
                    position="top"
                  />
                  <IstioObjectLink
                    name="reviews-v8"
                    namespace="bookinfo"
                    type="virtualservice"
                  >
                    reviews-v8
                  </IstioObjectLink>
                </span>,
              },
              Object {
                "title": <ValidationObjectSummary
                  id="7-config-validation"
                  style={
                    Object {
                      "verticalAlign": "-0.5em",
                    }
                  }
                  validations={Array []}
                />,
              },
            ],
          },
          Object {
            "cells": Array [
              Object {
                "title": <span>
                  <PFBadge
                    badge={
                      Object {
                        "badge": "VS",
                        "tt": "Virtual Service",
                      }
                    }
                    position="top"
                  />
                  <IstioObjectLink
                    name="reviews-v9"
                    namespace="bookinfo"
                    type="virtualservice"
                  >
                    reviews-v9
                  </IstioObjectLink>
                </span>,
              },
              Object {
                "title": <ValidationObjectSummary
                  id="8-config-validation"
                  style={
                    Object {
                      "verticalAlign": "-0.5em",
                    }
                  }
                  validations={Array []}
                />,
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      variant="compact"
    >
      <TableHeader />
      <TableBody />
    </Table>
  </CardBody>
</Card>
`;
